# zunou-mcp-servers

./: Dockerfile  README.md  jira.py  pyproject.toml  server.py
clients/: jira_factory.py  slack_factory.py
mcp_atlassian/servers/: confluence.py  dependencies.py  jira.py
